--- a/rainforest/app/views/products/index.html.erb
+++ b/rainforest/app/views/products/index.html.erb
@@ -4,6 +4,6 @@
 # <%= link_to "New Product", "/products/new" %>
 
 <% @products.each do |product| %>
-  <p><%= product.name %>, <%= product.description %> <%= product.price_in_cents %></p>
+  <p><%= product.name %>, <%= product.description %> <%= product.formatted_price %></p>
   <%= link_to "Product #{product.id}", "/products/#{product.id}" %>
 <% end %>
