--- a/rainforest/app/views/products/show.html.erb
+++ b/rainforest/app/views/products/show.html.erb
@@ -1,6 +1,6 @@
 <h1>Products</h1>
 <!-- <p>Find me in app/views/products/show.html.erb</p> -->
 
-<p><%= @product.name %>, <%= @product.description %>, <%= @product.price_in_cents %></p>
+<p><%= @product.name %>, <%= @product.description %>, <%= @product.formatted_price %></p>
 
 <%= link_to "Edit Product", "/products/#{@product.id}/edit" %>
