--- a/rainforest/app/views/users/new.html.erb
+++ b/rainforest/app/views/users/new.html.erb
@@ -14,8 +14,8 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :email %><br/>
-    <%= f.text_field :email %>
+    <%= f.label :name %><br/>
+    <%= f.text_field :name %>
   </div>
 
   <div class="field">
